--- a/arch/arm64/configs/k63v2_64_bsp_defconfig
+++ b/arch/arm64/configs/k63v2_64_bsp_defconfig
@@ -484,3 +484,8 @@ CONFIG_CRYPTO_LZO=y
 CONFIG_ANDROID_PARANOID_NETWORK=n
 CONFIG_NET_CLS_CGROUP=y
 CONFIG_CGROUP_NET_CLASSID=y
+CONFIG_USB_SERIAL=y
+CONFIG_USB_SERIAL_CONSOLE=y
+CONFIG_USB_SERIAL_GENERIC=y
+CONFIG_USB_SERIAL_PL2303=y
+
