--- a/arch/arm64/configs/k63v2_64_bsp_defconfig
+++ b/arch/arm64/configs/k63v2_64_bsp_defconfig
@@ -481,3 +481,4 @@ CONFIG_DEFAULT_SECURITY_APPARMOR=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_LZO=y
 # CONFIG_CRYPTO_HW is not set
+CONFIG_ANDROID_PARANOID_NETWORK=n
