--- a/arch/arm64/configs/k63v2_64_bsp_defconfig
+++ b/arch/arm64/configs/k63v2_64_bsp_defconfig
@@ -426,7 +426,7 @@ CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
 CONFIG_ION=y
 CONFIG_MTK_ION=y
-CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder,anbox-binder,binder1"
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder,anbox-binder,binder1,anbox-hwbinder,anbox-vndbinder"
 CONFIG_PROJECT_KOOBEE="k6305"
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
@@ -482,3 +482,5 @@ CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_LZO=y
 # CONFIG_CRYPTO_HW is not set
 CONFIG_ANDROID_PARANOID_NETWORK=n
+CONFIG_NET_CLS_CGROUP=y
+CONFIG_CGROUP_NET_CLASSID=y
