--- a/arch/arm64/configs/k63v2_64_bsp_defconfig
+++ b/arch/arm64/configs/k63v2_64_bsp_defconfig
@@ -277,6 +277,7 @@ CONFIG_SCSI_SCAN_ASYNC=y
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
+CONFIG_DM_SNAPSHOT=m
 CONFIG_DM_UEVENT=y
 CONFIG_DM_VERITY_FEC=y
 CONFIG_MTK_HW_FDE=y
