--- a/debian/control
+++ b/debian/control
@@ -25,7 +25,7 @@ Build-Depends: build-essential,
                mkbootimg,
                mkdtboimg,
                python3,
-               linux-initramfs-halium-generic:arm64, binutils-aarch64-linux-gnu, gcc-4.9-aarch64-linux-android, g++-4.9-aarch64-linux-android, libgcc-4.9-dev-aarch64-linux-android-cross
+               linux-initramfs-halium-generic:armhf, binutils-aarch64-linux-gnu, gcc-4.9-aarch64-linux-android, g++-4.9-aarch64-linux-android, libgcc-4.9-dev-aarch64-linux-android-cross
 Standards-Version: 4.5.0.3
 Vcs-Browser: https://github.com/hybris-mobian/linux-android-volla-yggdrasil
 Vcs-Git: https://github.com/hybris-mobian/linux-android-volla-yggdrasil.git
